--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="PICS/stars.png" id="stars">
         <img src="PICS/moon.png" id="moon">
         <img src="PICS/mountains_behind.png" id="mountains_behind">
-        <h2 id="text">Moon Light</h2>
+        <h2 id="text"><b>Moon Light........</b></h2>
         <a href="#sec" id="btn">Explore</a>
         <img src="PICS/mountains_front.png" id="mountains_front">
     </section>
